--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "node-sass": "^9.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-router-dom": "^6.16.0",
     "sass": "^1.68.0"
   },
